--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@astrojs/react": "^4.4.2",
+    "@astrojs/vercel": "^9.0.4",
     "@supabase/supabase-js": "^2.45.4",
     "@tailwindcss/vite": "^4.1.18",
     "@types/react": "^19.2.13",
