Ready for Cloudflare Pages deployment - removed Vercel dependencies, updated for direct Supabase uploads

--- a/.env.example
+++ b/.env.example
@@ -1,22 +1,12 @@
-# Supabase Configuration
+# Supabase Configuration for Cloudflare Pages
 # Get these values from your Supabase Dashboard → Project Settings → API
 
-# Supabase Project URL
-SUPABASE_URL=https://your-project.supabase.co
+# Public Supabase URL (for client-side)
+PUBLIC_SUPABASE_URL=https://your-project.supabase.co
 
-# Supabase Service Role Key (for server-side operations)
-# WARNING: Keep this key secret and never expose it to the client
-SUPABASE_SERVICE_ROLE_KEY=your-service-role-key-here
-
-# Supabase Anon Key (for client-side operations)
+# Public Supabase Anon Key (for client-side)
 # This key is safe to expose to the client
 PUBLIC_SUPABASE_ANON_KEY=your-anon-public-key-here
 
-# Public Supabase URL
-PUBLIC_SUPABASE_URL=https://your-project.supabase.co
-
-# Note: PUBLIC_ prefixed variables are available in both frontend and backend
-# Non-prefixed variables are only available on the server-side
-
-# For local development, copy this to .env.local
-# For Vercel deployment, add these in Vercel dashboard under Environment Variables
+# Note: For Cloudflare Pages, add these in Pages Settings → Environment Variables
+# Only PUBLIC_ prefixed variables are needed for client-side Supabase operations
